--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -11,16 +11,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GestionFinanzas"
-        tools:targetApi="31" >
+        tools:targetApi="31">
         <activity
-            android:name=".RegistrarGastos"
+            android:name=".Actividades.DetalleGastos"
             android:exported="false" />
         <activity
-            android:name=".RegistrarIngresos"
+            android:name=".Actividades.DetalleIngresos"
             android:exported="false" />
         <activity
-            android:name=".MainBalance"
-            android:exported="true" >
+            android:name=".Actividades.RegistrarGastos"
+            android:exported="false" />
+        <activity
+            android:name=".Actividades.RegistrarIngresos"
+            android:exported="false" />
+        <activity
+            android:name=".Actividades.MainBalance"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
