--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,16 @@ android {
 
 dependencies {
 
+    //firebase
+    implementation platform('com.google.firebase:firebase-bom:30.1.0')
+    //libreira de autenticacion
+    implementation 'com.google.firebase:firebase-auth:22.1.1'
+    //UI libreria auth
+    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
+    // Firestore
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.7.1'
+    implementation 'com.google.firebase:firebase-appcheck:17.0.1'
+
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.5.0'
